--- a/site/index.html
+++ b/site/index.html
@@ -29,6 +29,7 @@
         <div class="container">
           <div class="hero">
             <h1 class="subheading">Couch Ref</h1>
+            <h4 class="subheading">Coming Soon</h4>
           </div>
         </div>
 
