--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>React Static Boilerplate</title>
+    <title>Couch Ref</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,11 +11,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400italic" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="../styles/header.css" type="text/css">
+
+    <link rel="apple-touch-icon" href="images/football.svg">
+    <link rel="icon" type="image/svg+xml" href="images/football.svg"/>
+    <link rel="icon" type="image/png" href="images/football.svg"/>
   </head>
   <body>
+    <div class="brand-header">
+      <div class="container">
+        <h4>Couch Ref</h4>
+      </div>
+    </div>
+
     <div id="container" class="container"></div>
-    <script src="/dist/main.js?a633fbc07f11cd619d5d"></script>
+    <script src="/dist/main.js?e9bdcd37ac8c74d6f623"></script>
   </body>
 </html>
