--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Old fonts
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400italic" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
+    -->
+
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat:700|Open+Sans:300|Raleway:500" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="images/football.svg">
     <link rel="icon" type="image/svg+xml" href="images/football.svg"/>
