--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat:700|Open+Sans:300|Raleway:500|Work+Sans" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="images/football.svg">
-    <link rel="icon" type="image/svg+xml" href="images/football.svg"/>
-    <link rel="icon" type="image/png" href="images/football.svg"/>
+    <link rel="icon" type="image/svg+xml" href="images/couch-ref.svg"/>
+    <link rel="icon" type="image/png" href="images/couch-ref.svg"/>
   </head>
   <body>
     <div id="container"></div>
