--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400italic" type="text/css">
     -->
 
-    <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat:700|Open+Sans:300|Raleway:500|Work+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat:700|Open+Sans:300|Work+Sans" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="images/football.svg">
     <link rel="icon" type="image/svg+xml" href="images/couch-ref.svg"/>
