Adding sex, dob and location user questions

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     -->
 
     <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat:700|Open+Sans:300|Work+Sans" rel="stylesheet">
+    <link href="/css/react-date-picker.css" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 
     <link rel="apple-touch-icon" href="images/football.svg">
