--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     -->
 
     <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat:700|Open+Sans:300|Work+Sans" rel="stylesheet">
-    <link href="/css/react-date-picker.css" rel="stylesheet">
+    <link href="/css/font-size.css" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 
     <link rel="apple-touch-icon" href="images/football.svg">
     <link rel="icon" type="image/svg+xml" href="images/couch-ref.svg"/>
     <link rel="icon" type="image/png" href="images/couch-ref.svg"/>
   </head>
-  <body style="font-size: 10px;">
+  <body>
     <div id="container"></div>
     <script src="/js/bundle.js"></script>
   </body>
