--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,8 @@
     <link href="/css/font-size.css" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 
-    <link rel="apple-touch-icon" href="images/football.svg">
-    <link rel="icon" type="image/svg+xml" href="images/couch-ref.svg"/>
-    <link rel="icon" type="image/png" href="images/couch-ref.svg"/>
+    <link rel="apple-touch-icon" href="images/logo.png">
+    <link rel="icon" type="image/png" href="images/logo.png"/>
   </head>
   <body>
     <div id="container"></div>
